public/css/application.css
textarea.markdown {
	background: transparent url("/img/markdown-mark/66x40.png") no-repeat calc(100% - 16px) calc(100% - 16px);
}

.page-not-found {
	padding: 40px 15px;
	text-align: center;
}

.entry-panel .panel-title {
	width: 50%;
	display: inline-block;
}

.entry-panel .btn {
	float: right;
}

.entry-panel .panel-body {
	overflow-x: scroll;
}

.entry-panel .panel-footer .table {
	margin-bottom: 0;
}

.entry-panel .panel-footer .table tr:first-child * {
	border: none;
}

.entry-panel img {
	max-width: 100%;
}

#sidebar > p {
	text-align: center;
}

